--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,12 @@
             <span class="popup__tip">Email</span>
             <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
               placeholder="Введите почту">
-            <span id="errorAddName" class="error" aria-live="polite"></span>
+            <span class="popup__input-name-err" id="errorAddName" class="error" aria-live="polite">Неправильный формат email</span>
             <span class="popup__tip">Пароль</span>
             <input id="formAddUrl" required type="text" min="8" name="link"
               class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
             <span id="errorAddUrl" class="error" aria-live="polite"></span>
-            <button id="addSbmBtn" type="submit" class="popup__button" disabled>Войти</button>
+            <button id="addSbmBtn" type="submit" class="popup__button" >Войти</button>
           </form>
           <div class="popup__reg">
           <span>или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
@@ -57,12 +57,12 @@
     </header>
     <main>
       <section class="preloader">
-        <div class="preloader__wrapper preloader__wrapper_search">
+        <!-- <div class="preloader__wrapper preloader__wrapper_search">
           <i class="preloader__circle"></i>
           <span class="preloader__search-text">Идет поиск новостей...</span>
-        </div>
+        </div> -->
         <div class="preloader__wrapper preloader__wrapper_not-found">
-          <!-- <img class="preloader__not-found-img" src="/src/images/not-found.svg" alt="Картинка ничего не найдено"> -->
+          <img class="preloader__not-found-img" src="<%= require('./images/not-found.svg')%>"   alt="Картинка ничего не найдено">
           <h3 class="preloader__search-title">Ничего не найдено</h3>
           <span class="preloader__search-text">К сожалению по вашему запросу
             ничего не найдено...</span>
@@ -153,10 +153,10 @@
       </nav>
       <div class="footer__social">
         <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <img src="./src/images/git.svg" alt="GitHub Logo">
+          <img src="<%= require('./images/git.svg')%>" alt="GitHub Logo">
         </a>
         <a class="footer__social-link" href="https://facebook.com">
-          <img src="./src/images/facebook.svg" alt="Facebook Logo">
+          <img src="<%= require('./images/facebook.svg')%>" alt="Facebook Logo">
         </a>
       </div>
     </footer>
