--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -22,7 +22,7 @@
               статьи</a></li>
           <li class="menu__item"><a
               class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
-                class="menu__logout-icon" src="../src/images/logout.svg" alt="logout icon">
+                class="menu__logout-icon" src="../<%= require('../../images/logout.svg')%>">
             </a></li>
         </ul>
       </nav>
@@ -54,16 +54,16 @@
         <h2 class="technology__title">Используемые технологии</h2>
         <div class="technology__container">
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/html.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/html.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/css.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/css.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/js.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/js.svg')%>" alt="">
           </div>
           <div class="technology__item">
-            <img class="technology__item-logo" src="../src/images/webpack.svg" alt="">
+            <img class="technology__item-logo" src="../<%= require('../../images/webpack.svg')%>" alt="">
           </div>
         </div>
       </div </section> <section class="about">
@@ -91,7 +91,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -103,7 +103,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -115,7 +115,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -127,7 +127,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -139,7 +139,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -151,7 +151,7 @@
           <div class="swiper-slide">
             <span class="slider__date">14 августа, 2019</span>
             <div class="slider__author">
-              <img class="slider__photo" src="../src/images/photos/image-01.jpg" alt="фото">
+              <img class="slider__photo" src="../<%= require('../../images/image-01.jpg')%>" alt="фото">
               <div class="slider__author-box">
                 <h3 class="slider__auther-name">Антон Долинин</h3>
                 <span class="slider__auther-email">anton@yandex.ru</span>
@@ -165,6 +165,7 @@
       </div>
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
+      <a class="slider__git-link_mobile menu__link-auth   " href="https://github.com/VBulanyi/">Открыть в Github</a>
     </section>
     <footer class="footer">
       <p class="footer__copyright footer__copyright_grey">&copy; 2019. Владимир Буланый</p>
@@ -177,15 +178,14 @@
       </nav>
       <div class="footer__social">
         <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <img src="../src/images/git.svg" alt="GitHub Logo">
+          <img src="../<%= require('../../images/git.svg')%>" alt="GitHub Logo">
         </a>
         <a class="footer__social-link" href="https://facebook.com">
-          <img src="../src/images/facebook.svg" alt="Facebook Logo">
+          <img src="../<%= require('../../images/facebook.svg')%>" alt="Facebook Logo">
         </a>
       </div>
     </footer>
     <script src="<%= htmlWebpackPlugin.files.chunks.about.entry %>"></script>
   </div>
 </body>
-
 </html>
