--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
   <title>News Explorer</title>
   <meta name="author" content="Vladimir Bulanyi">
   <meta name="description" content="Diploma project">
-  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?384495e6ea22b6a6b5ef">
+  <link rel="stylesheet" href="../index.43c7783e8dca2486513b.css?01f9c5c306fd0c6bed5e">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
               статьи</a></li>
           <li class="menu__item"><a
               class="menu__column-link menu__colunm-link_black menu__link-auth menu__link-auth_black" href="#">Грета<img
-                class="menu__logout-icon" src=".././src/images/logout.svg">
+                class="menu__logout-icon" src=".././src/images/logout.svg" alt="logout button">
             </a></li>
         </ul>
       </nav>
@@ -66,7 +66,9 @@
             <img class="technology__item-logo" src=".././src/images/webpack.svg" alt="">
           </div>
         </div>
-      </div </section> <section class="about">
+      </div>
+    </section>
+    <section class="about">
       <div class="about__wrapper">
         <div class="about__photo">
         </div>
@@ -185,7 +187,7 @@
         </a>
       </div>
     </footer>
-    <script src="../about/about.384495e6ea22b6a6b5ef.js?384495e6ea22b6a6b5ef"></script>
+    <script src="../about/about.01f9c5c306fd0c6bed5e.js?01f9c5c306fd0c6bed5e"</script>
   </div>
 </body>
 </html>
