--- a/index.html
+++ b/index.html
@@ -32,137 +32,139 @@
             <button class="button header-search__button">Искать</button>
           </form>
         </div>
-    </div>
-    <div class="popup-form">
-      <div class="popup popupAdd">
-        <div class="popup__content">
-          <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
-          <h3 class="popup__title">Вход</h3>
-          <form id="formAdd" class="popup__form" name="new">
-            <span class="popup__tip">Email</span>
-            <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
-              placeholder="Введите почту">
-            <span class="popup__input-name-err" id="errorAddName" class="error" aria-live="polite">Неправильный формат email</span>
-            <span class="popup__tip">Пароль</span>
-            <input id="formAddUrl" required type="text" min="8" name="link"
-              class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
-            <span id="errorAddUrl" class="error" aria-live="polite"></span>
-            <button id="addSbmBtn" type="submit" class="popup__button" >Войти</button>
-          </form>
-          <div class="popup__reg">
-          <span>или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
+        <div class="popup-form">
+          <div class="popup popupAdd">
+            <div class="popup__content">
+              <img id="formAddClose" src="./src/images/close.svg" alt="" class="popup__close">
+              <h3 class="popup__title">Вход</h3>
+              <form id="formAdd" class="popup__form" name="new">
+                <span class="popup__tip">Email</span>
+                <input required id="formAddName" type="email" name="name" class="popup__input popup__input_type_name"
+                  placeholder="Введите почту">
+                <span class="popup__input-name-err" id="errorAddName" class="error" aria-live="polite">Неправильный формат email</span>
+                <span class="popup__tip">Пароль</span>
+                <input id="formAddUrl" required type="text" min="8" name="link"
+                  class="popup__input popup__input_type_link-url" placeholder="Введите пароль">
+                 <button id="addSbmBtn" type="submit" class="popup__button">Войти</button>
+              </form>
+              <div class="popup__reg">
+                <span>или </span><a class="popup__reg-link" href="">Зарегистрироваться</a></div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    </header>
-    <main>
-      <section class="preloader">
-        <!-- <div class="preloader__wrapper preloader__wrapper_search">
+      </header>
+      <main>
+        <section class="preloader">
+          <!-- <div class="preloader__wrapper preloader__wrapper_search">
           <i class="preloader__circle"></i>
           <span class="preloader__search-text">Идет поиск новостей...</span>
         </div> -->
-        <div class="preloader__wrapper preloader__wrapper_not-found">
-          <img class="preloader__not-found-img" src="./src/images/not-found.svg"   alt="Картинка ничего не найдено">
-          <h3 class="preloader__search-title">Ничего не найдено</h3>
-          <span class="preloader__search-text">К сожалению по вашему запросу
-            ничего не найдено...</span>
-        </div>
-      </section>
+          <div class="preloader__wrapper preloader__wrapper_not-found">
+            <img class="preloader__not-found-img" src="./src/images/not-found.svg"
+              alt="Картинка ничего не найдено">
+            <h3 class="preloader__search-title">Ничего не найдено</h3>
+            <span class="preloader__search-text">К сожалению по вашему запросу
+              ничего не найдено...</span>
+          </div>
+        </section>
 
-      <section class="results">
-        <div class="results__main-container">
-          <h2 class="results__title">Результаты поиска</h2>
-          <div class="results__continer">
-            <div class="card">
-              <div class="card__image">
-                <div class="card__backgronud"></div>
-                <div class="card__bookmark"></div>
-                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять
-                  статьи</span>
+        <section class="results">
+          <div class="results__main-container">
+            <h2 class="results__title">Результаты поиска</h2>
+            <div class="results__continer">
+              <div class="card">
+                <div class="card__image">
+                  <div class="card__backgronud"></div>
+                  <div class="card__bookmark"></div>
+                  <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы
+                    сохранять
+                    статьи</span>
+                </div>
+                <div class="card__content">
+                  <span class="card__date">2 августа, 2019</span>
+                  <h3 class="card__title">Национальное достояние – парки</h3>
+                  <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                    складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                    приобщиться к природе.</p>
+                  <span class="card__source">ЛЕНТА.РУ</span>
+                </div>
               </div>
-              <div class="card__content">
-                <span class="card__date">2 августа, 2019</span>
-                <h3 class="card__title">Национальное достояние – парки</h3>
-                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
-                  приобщиться к природе.</p>
-                <span class="card__source">ЛЕНТА.РУ</span>
+              <div class="card">
+                <div class="card__image">
+                  <div class="card__backgronud"></div>
+                  <div class="card__bookmark"></div>
+                  <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы
+                    сохранять
+                    статьи</span>
+                </div>
+                <div class="card__content">
+                  <span class="card__date">2 августа, 2019</span>
+                  <h3 class="card__title">Национальное достояние – парки</h3>
+                  <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                    складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                    приобщиться к природе.</p>
+                  <span class="card__source">ЛЕНТА.РУ</span>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card__image">
+                  <div class="card__backgronud"></div>
+                  <div class="card__bookmark_marked"></div>
+                  <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы
+                    сохранять
+                    статьи</span>
+                </div>
+                <div class="card__content">
+                  <span class="card__date">2 августа, 2019</span>
+                  <h3 class="card__title">Национальное достояние – парки</h3>
+                  <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
+                    складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
+                    приобщиться к природе.</p>
+                  <span class="card__source">ЛЕНТА.РУ</span>
+                </div>
               </div>
             </div>
-            <div class="card">
-              <div class="card__image">
-                <div class="card__backgronud"></div>
-                <div class="card__bookmark"></div>
-                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять
-                  статьи</span>
-              </div>
-              <div class="card__content">
-                <span class="card__date">2 августа, 2019</span>
-                <h3 class="card__title">Национальное достояние – парки</h3>
-                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
-                  приобщиться к природе.</p>
-                <span class="card__source">ЛЕНТА.РУ</span>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card__image">
-                <div class="card__backgronud"></div>
-                <div class="card__bookmark_marked"></div>
-                <span class="card__bookmark-notification card__bookmark-notification_loged-in">Войдите, чтобы сохранять
-                  статьи</span>
-              </div>
-              <div class="card__content">
-                <span class="card__date">2 августа, 2019</span>
-                <h3 class="card__title">Национальное достояние – парки</h3>
-                <p class="card__text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться система национальных парков – охраняемых территорий, где и сегодня каждый может
-                  приобщиться к природе.</p>
-                <span class="card__source">ЛЕНТА.РУ</span>
-              </div>
-            </div>
+            <button class="button results__show-more">Показать еще</button>
           </div>
-          <button class="button results__show-more">Показать еще</button>
-        </div>
-      </section>
+        </section>
 
-      <section class="about">
-        <div class="about__wrapper">
-          <div class="about__photo">
+        <section class="about">
+          <div class="about__wrapper">
+            <div class="about__photo">
+            </div>
+            <div class="about__content">
+              <h2 class="about__title">Об авторе</h2>
+              <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
+                занимаетесь, какими технологиями разработки владеете.
+                <br>
+                <br>
+                Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
+                потенциальным заказчикам.</p>
+            </div>
           </div>
-          <div class="about__content">
-            <h2 class="about__title">Об авторе</h2>
-            <p class="about__text">Это блок с описанием автора проекта. Здесь следует указать, как вас зовут, чем вы
-              занимаетесь, какими технологиями разработки владеете.
-              <br>
-              <br>
-              Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
-              потенциальным заказчикам.</p>
-          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
+        <nav>
+          <ul class="footer__menu">
+            <li class="footer__menu-link"><a href="./">Главная</a></li>
+            <li class="footer__menu-link"><a href="./about">О проектке</a></li>
+            <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
+          </ul>
+        </nav>
+        <div class="footer__social">
+          <a class="footer__social-link" href="https://github.com/VBulanyi/">
+            <img src="./src/images/git.svg" alt="GitHub Logo">
+          </a>
+          <a class="footer__social-link" href="https://facebook.com">
+            <img src="./src/images/facebook.svg" alt="Facebook Logo">
+          </a>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <p class="footer__copyright">&copy; 2019. Владимир Буланый</p>
-      <nav>
-        <ul class="footer__menu">
-          <li class="footer__menu-link"><a href="./">Главная</a></li>
-          <li class="footer__menu-link"><a href="./about">О проектке</a></li>
-          <li class="footer__menu-link"><a href="https://praktikum.yandex.ru">Яндекс.Практикум</a></li>
-        </ul>
-      </nav>
-      <div class="footer__social">
-        <a class="footer__social-link" href="https://github.com/VBulanyi/">
-          <img src="./src/images/git.svg" alt="GitHub Logo">
-        </a>
-        <a class="footer__social-link" href="https://facebook.com">
-          <img src="./src/images/facebook.svg" alt="Facebook Logo">
-        </a>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </div>
-  </div>
-  <script src="main.384495e6ea22b6a6b5ef.js"></script>
+  <script src="main.01f9c5c306fd0c6bed5e.js"></script>
 </body>
 
 </html>
